syntax = "proto3";
import "base.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option go_package = ".;proto"; // 新版必须要有  决定pd.go文件的包名

service Greeter{
  rpc SayHello(HelloRequest) returns(HelloReply); // Hello接口
  rpc Ping(google.protobuf.Empty) returns (Pong);
}
enum Gender {
  MALL = 0;
  FEMALE = 1;
}
message HelloRequest {
  string name = 1;
  int32 age = 2;
  repeated string courses = 3;
  Gender g = 4; //枚举类型
  map<string,string> mp = 5; //map对象
  google.protobuf.Timestamp addTime = 6;
}


message HelloReply{
  string messgae = 1;

  
  //嵌套message对象
  message  Result {
    string name = 1;
    string url = 2;
  }
  repeated Result data = 2;
}

